old-files/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astro-financial
  labels:
    name: astro-financial
    environment: production
